new pages created, sigin page, reservation page, confirmation page, sweetalert2 added, some changes in footer

--- a/src/index.css
+++ b/src/index.css
@@ -10,3 +10,7 @@ a {
 a.nav-link.active {
   @apply text-xl font-bold text-[#14274A] !important;
 }
+
+footer a {
+  @apply text-white !important;
+}
