signup page and recipt page added, pics for signin and signup page changed

--- a/src/index.css
+++ b/src/index.css
@@ -14,3 +14,17 @@ a.nav-link.active {
 footer a {
   @apply text-white !important;
 }
+
+body {
+  @apply bg-gray-300 !important;
+}
+
+/* printing recipt */
+@media print {
+  body * {
+    display: none;
+  }
+  .print-content, .print-content * {
+    display: block;
+  }
+}
