otp page created with bugs

--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,21 @@ body {
   body * {
     display: none;
   }
-  .print-content, .print-content * {
+  .print-content,
+  .print-content * {
     display: block;
   }
+}
+
+/* arrow for input type number disabled */
+/* Chrome, Safari, Edge, Opera */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
 }
